--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -10,11 +10,11 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">34</context>
+          <context context-type="linenumber">33</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">53</context>
+          <context context-type="linenumber">52</context>
         </context-group>
       </trans-unit>
       <trans-unit id="nav_abme" datatype="html">
@@ -25,11 +25,11 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">35</context>
+          <context context-type="linenumber">34</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">54</context>
+          <context context-type="linenumber">53</context>
         </context-group>
       </trans-unit>
       <trans-unit id="nav_por" datatype="html">
@@ -40,11 +40,11 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">36</context>
+          <context context-type="linenumber">35</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">55</context>
+          <context context-type="linenumber">54</context>
         </context-group>
       </trans-unit>
       <trans-unit id="nav_contact" datatype="html">
@@ -55,18 +55,18 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">39</context>
+          <context context-type="linenumber">38</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">58</context>
+          <context context-type="linenumber">57</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang_option_ru" datatype="html">
         <source>Russian</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">69</context>
+          <context context-type="linenumber">68</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/home-page/home-page.component.html</context>
@@ -77,22 +77,18 @@
         <source>English</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">70</context>
+          <context context-type="linenumber">69</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/home-page/home-page.component.html</context>
           <context context-type="linenumber">7</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="lang_option_lv" datatype="html">
-        <source>Latvian</source>
+      <trans-unit id="lang_choice" datatype="html">
+        <source>Language Choice</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/main-nav/main-nav.component.html</context>
-          <context context-type="linenumber">71</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/home-page/home-page.component.html</context>
-          <context context-type="linenumber">8</context>
+          <context context-type="linenumber">67</context>
         </context-group>
       </trans-unit>
       <trans-unit id="title_1" datatype="html">
@@ -254,7 +250,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="about_par_1" datatype="html">
-        <source>My name is Andrey. I am European Union citizen and was born in Riga, Latvia. I am speaking on 3
+        <source>My name is Andrey. I am European Union citizen and was born in Riga, Latvia. I am
+    speaking on 3
     languages. It is English, Russian and Latvian. I have started learning programming in 15 years old and I immediately
     realized that programming is the thing of my life. I have had several hobbies like gym, finance sciences and rock
     climbing. I am already have had experience in working in several companies like my last job in Arcona ltd. where I
@@ -279,42 +276,83 @@
         <source>Education</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
-          <context context-type="linenumber">109</context>
+          <context context-type="linenumber">110</context>
         </context-group>
       </trans-unit>
       <trans-unit id="about_educ_s_1" datatype="html">
         <source>Rigas 80. Secondary School</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
-          <context context-type="linenumber">113</context>
+          <context context-type="linenumber">114</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="about_educ_des_1" datatype="html">
+        <source>
+        Rigas 80 is a school in Latvia where I received basic education up to grade 10. In total, we studied 14 subjects
+        from the humanities such as Russian, Latvian, English and World History to the exact sciences like chemistry,
+        physics and mathematics
+      </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
+          <context context-type="linenumber">115</context>
         </context-group>
       </trans-unit>
       <trans-unit id="about_educ_s_2" datatype="html">
-        <source>Progmesisters </source>
+        <source>Progmeistars </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
-          <context context-type="linenumber">123</context>
+          <context context-type="linenumber">125</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="about_educ_des_2" datatype="html">
+        <source> In Progmeistars, I studied the basics of Computer Science based on 2 programming languages: Pascal and Object
+        Pascal (on which we got OOP and on which we created applications for Windows), the course also included the
+        basics of algorithms and basic knowledge of HTML and CSS
+      </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
+          <context context-type="linenumber">126</context>
         </context-group>
       </trans-unit>
       <trans-unit id="about_educ_s_3" datatype="html">
         <source>Earlscliffe college</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
-          <context context-type="linenumber">133</context>
+          <context context-type="linenumber">135</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="about_educ_des_3" datatype="html">
+        <source> In EC, I went through an A level training program, in which I studied in depth 5 subjects: Economics,
+        Mathematics, Physics, Russian and Geography, after this training program I have accumulated a comprehensive
+        supply of knowledge in such fields as finance, social sciences, as well as deep understanding of mathematics as
+        a science and physics which operates on it
+      </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
+          <context context-type="linenumber">136</context>
         </context-group>
       </trans-unit>
       <trans-unit id="about_educ_s_4" datatype="html">
         <source>Essex University</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
-          <context context-type="linenumber">143</context>
+          <context context-type="linenumber">146</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="about_educ_des_4" datatype="html">
+        <source> Since 2019, I began studying Computer Science at Essex University, where I plan to delve into topics such as
+        artificial intelligence and machine learning
+      </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
+          <context context-type="linenumber">147</context>
         </context-group>
       </trans-unit>
       <trans-unit id="about_contact" datatype="html">
         <source>CONTACT</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about-me/about-me.component.html</context>
-          <context context-type="linenumber">153</context>
+          <context context-type="linenumber">155</context>
         </context-group>
       </trans-unit>
       <trans-unit id="portfo_page_title" datatype="html">
